# watchful

./: .gitignore  Cargo.toml  README.md  flashsd.sh  memory.x  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yml
blog/: part-1.md
firmware/: Cargo.toml  build.rs  memory-img.x  memory.x
firmware/.cargo/: config.toml
firmware/app/: Cargo.toml  build.rs  memory.x
firmware/app/src/: ble.rs  clock.rs  device.rs  display_interface.rs  main.rs  state.rs
firmware/application/: Cargo.toml
firmware/application/src/: main.rs
firmware/boot/: Cargo.toml  memory.x
firmware/boot/src/: main.rs
firmware/bootloader/: Cargo.toml  memory.x
firmware/bootloader/src/: main.rs
firmware/src/: ble.rs  device.rs  firmware_validator.rs  main.rs  state.rs
infinitime-recovery/: Cargo.toml
infinitime-recovery/.cargo/: config.toml
infinitime-recovery/app/: Cargo.toml  build.rs  memory.x
infinitime-recovery/app/src/: main.rs
infinitime-recovery/boot/: Cargo.toml  memory.x
infinitime-recovery/boot/.cargo/: config.toml
infinitime-recovery/boot/src/: main.rs
infinitime-recovery/recovery/: Cargo.toml
infinitime-recovery/recovery/src/: lib.rs
nrf-dfu/: Cargo.toml
nrf-dfu/src/: crc.rs  dfu.rs  lib.rs
pinetime-flash/: Cargo.toml
pinetime-flash/src/: flash.rs  lib.rs
pinetime-ui/: Cargo.toml
pinetime-ui/src/: lib.rs
reloader/: Cargo.toml
reloader/app/: Cargo.toml  build.rs  memory.x
reloader/app/src/: main.rs
reloader/boot/: Cargo.toml  memory.x
reloader/boot/src/: main.rs
scripts/: build.sh  flash.sh  flash_infinitime.sh  flashsd.sh  prepare.sh  prepare_bm.sh  prepare_debug.sh  prepare_recovery.sh
src/: crc.rs  dfu.rs  main.rs
watchful-ui/: Cargo.toml
watchful-ui/examples/: menu.rs
watchful-ui/src/: core.rs  lib.rs
