[package]
edition = "2021"
name = "pinetime-embassy"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.2.0" }
embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "nightly", "unstable-pac", "time"] }
embedded-io = "0.4.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
mipidsi = { version = "0.7.1", default-features = false, features = ["heapless"] }
display-interface = "0.4.1"
embedded-graphics = "0.8.0"
display-interface-spi = "0.4.1"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
