[package]
edition = "2021"
name = "watchful"
version = "0.3.2"
license = "MIT OR Apache-2.0"
build = "build.rs"
resolver = "2"

[dependencies]
embassy-futures = { version = "0.1" }
futures = { version = "0.3", default-features = false, features = ["async-await"]}
embassy-embedded-hal = { version = "0.3", default-features = false }
embassy-sync = { version = "0.6" }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt", "nightly"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.3", features = ["defmt", "nrf52832", "time-driver-rtc1", "rt", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-storage = "0.3"
embedded-storage-async = "0.4"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = "0.2"
nrf-dfu-target = { version = "0.3.2", features = ["defmt"] }
pinetime-flash = { version = "0.1.0", path = "../pinetime-flash", features = ["defmt"] }
watchful-ui = { version = "0.1.0", path = "../watchful-ui", features = ["defmt"] }
cst816s = "0.1.4"
hrs3300 = { version = "0.1.0" }

defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
#defmt-brtt = { version = "0.1", features = ["async-await"] }
#
nrf-sdc = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52832", "peripheral"] }
nrf-mpsl = { version = "0.1.0", default-features = false, features = ["defmt", "critical-section-impl"] }
bt-hci = { version = "0.1.2", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.1.0", features = ["defmt", "gatt", "peripheral", "l2cap-tx-packet-pool-size-16"] }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
mipidsi = { version = "0.8", default-features = false, features = ["heapless"] }
heapless = { version = "0.8", features = ["defmt-03"] }
display-interface = "0.5"
embedded-graphics = "0.8"
embedded-text = "0.7"
display-interface-spi = "0.5"
time = { version = "0.3.24", default-features = false }
byte-slice-cast = { version = "1.2.0", default-features = false }

[features]
baremetal = []

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[patch.crates-io]
hrs3300 = { git = "https://github.com/lulf/hrs3300-rs.git", branch = "hal-1.0" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "551a95436e999b4290b4a33383aa3d6747b63dd9" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "551a95436e999b4290b4a33383aa3d6747b63dd9" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "54cd0465ca497495b5890d896fc1f048f0a0f1ee" }
#nrf-dfu-target = { path = "../../nrf-dfu" }
#trouble-host = { path = "../../trouble/host" }

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "bcebe4c4d5b597da0b8741916e450c46e6fef06e" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "bcebe4c4d5b597da0b8741916e450c46e6fef06e" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "bcebe4c4d5b597da0b8741916e450c46e6fef06e" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "bcebe4c4d5b597da0b8741916e450c46e6fef06e" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "bcebe4c4d5b597da0b8741916e450c46e6fef06e" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "bcebe4c4d5b597da0b8741916e450c46e6fef06e" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "bcebe4c4d5b597da0b8741916e450c46e6fef06e" }

[profile.release]
debug = 2
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 's' # try `s` or `z`, sometimes one is smaller, sometimes the other.

