[workspace]
members = [
  "app",
  "boot"
]

resolver = "2"

[patch.crates-io]
# embassy-executor = { path = "../../embassy/embassy-executor" }
# embassy-time = {path = "../../embassy/embassy-time"}
# embassy-sync = {path = "../../embassy/embassy-sync"}
# embassy-nrf = {path = "../../embassy/embassy-nrf"}
# embassy-embedded-hal = {path = "../../embassy/embassy-embedded-hal"}
# embassy-boot = {path = "../../embassy/embassy-boot/boot"}
# embassy-boot-nrf = {path = "../../embassy/embassy-boot/nrf"}
# embassy-futures = {path = "../../embassy/embassy-futures"}
#embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }

[profile.release]
debug = 2
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 's' # try `s` or `z`, sometimes one is smaller, sometimes the other.

