[package]
edition = "2021"
name = "nrf-dfu"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.2.0" }
embassy-boot = { version = "0.1.0", features = ["nightly"] }
embedded-io = "0.4.0"
embedded-storage-async = "0.4.0"
embedded-storage = "0.3.0"
embedded-hal = "=1.0.0-alpha.11"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6" }
defmt = { version = "0.3", optional = true }
heapless = "0.7"

[features]
defmt = [
      "dep:defmt",
]

[patch.crates-io]
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "cf278ea1b6ce29b7908a9f93de4cbdfd7d0dea37" }
#embassy-boot = { path = "../../embassy/embassy-boot/boot" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "cf278ea1b6ce29b7908a9f93de4cbdfd7d0dea37" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "cf278ea1b6ce29b7908a9f93de4cbdfd7d0dea37" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "cf278ea1b6ce29b7908a9f93de4cbdfd7d0dea37" }
