[package]
name = "watchful-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.0"
embedded-text = "0.6.0"
heapless = "0.7"
defmt = { version = "0.3", optional = true }
u8g2-fonts = { version = "0.3", features = ["embedded_graphics_textstyle"] }
time = { version = "0.3", default-features = false }
micromath = "2.0"

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
