[package]
name = "watchful-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8"
embedded-text = "0.7"
embedded-layout = "0.4"
embedded-iconoir = "0.2"
heapless = "0.8"
defmt = { version = "0.3", optional = true }
u8g2-fonts = { version = "0.4", features = ["embedded_graphics_textstyle"] }
time = { version = "0.3", default-features = false }
micromath = "2.1"

[dev-dependencies]
embedded-graphics-simulator = "0.6"
time = "0.3"
