[package]
edition = "2021"
name = "pinetime-embassy"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0" }
futures = { version = "0.3", default-features = false, features = ["async-await"]}
embassy-embedded-hal = { version = "0.1.0" }
embassy-sync = { version = "0.2.0" }
embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "nightly", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "nightly", "unstable-pac", "time", "unstable-traits"] }
embassy-boot-nrf = { version = "0.1.0", features = ["nightly"] }
embedded-io = "0.4.0"
embedded-storage = "0.3.0"
embedded-hal = "=1.0.0-alpha.11"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6" }
nrf-dfu-target = { version = "0.1.0", features = ["defmt"] }
pinetime-flash = { version = "0.1.0", path = "../../pinetime-flash", features = ["defmt"] }

nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52832", "s132", "ble-gatt-server", "ble-gatt-client", "ble-peripheral", "critical-section-impl", "evt-max-size-256"] }
nrf-softdevice-s132 = { version = "0.1.1" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
mipidsi = { version = "0.7.1", default-features = false, features = ["heapless"] }
heapless = "0.7"
display-interface = "0.4.1"
embedded-graphics = "0.8.0"
embedded-text = "0.6.0"
display-interface-spi = "0.4.1"
u8g2-fonts = "0.3.0"
time = { version = "0.3", default-features = false }
byte-slice-cast = { version = "1.2.0", default-features = false }
