[package]
edition = "2021"
name = "watchful"
version = "0.2.5"
license = "MIT OR Apache-2.0"
build = "build.rs"
resolver = "2"

[dependencies]
embassy-futures = { version = "0.1" }
futures = { version = "0.3", default-features = false, features = ["async-await"]}
embassy-embedded-hal = { version = "0.1", default-features = false }
embassy-sync = { version = "0.5" }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-nrf = { version = "0.1", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
embassy-boot-nrf = { version = "0.2" }
embassy-boot = { version = "0.2" }
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-storage = "0.3"
embedded-hal = "1.0"
nrf-dfu-target = { version = "0.1.1", features = ["defmt"] }
pinetime-flash = { version = "0.1.0", path = "../../pinetime-flash", features = ["defmt"] }
watchful-ui = { version = "0.1.0", path = "../../watchful-ui", features = ["defmt"] }
cst816s = "0.1.4"
hrs3300 = { version = "0.1.0" }

nrf-softdevice = { version = "0.1", features = ["defmt", "nrf52832", "s132", "ble-gatt-server", "ble-gatt-client", "ble-peripheral", "critical-section-impl", "evt-max-size-256"] }
nrf-softdevice-s132 = { version = "0.1" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
#defmt-brtt = { version = "0.1", features = ["async-await"] }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
mipidsi = { version = "0.7.1", default-features = false, features = ["heapless"] }
heapless = "0.8"
display-interface = "0.5"
embedded-graphics = "0.8"
embedded-text = "0.7"
display-interface-spi = "0.5"
time = { version = "0.3.24", default-features = false }
byte-slice-cast = { version = "1.2.0", default-features = false }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[patch.crates-io]
hrs3300 = { git = "https://github.com/lulf/hrs3300-rs.git", branch = "hal-1.0" }
mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master" }
nrf-softdevice-s132 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master" }

[profile.release]
debug = 2
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 's' # try `s` or `z`, sometimes one is smaller, sometimes the other.

