[package]
edition = "2021"
name = "watchful-bootloader"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
embassy-futures = { version = "0.1", default-features = false }
embassy-sync = { version = "0.5", default-features = false }
embassy-nrf = { version = "0.1", default-features = false, features = ["rt", "nrf52832", "time", "gpiote", "time-driver-rtc1"] }
embassy-embedded-hal = { version = "0.1", default-features = false }
embassy-boot = { version = "0.2", default-features = false }
embassy-boot-nrf = { version = "0.2", default-features = false, features = ["softdevice"] }
embedded-io = "0.6"
embedded-storage-async = "0.4"
embedded-storage = "0.3"
embedded-hal = "1.0"
nrf-softdevice-mbr = { version = "0.2" }
pinetime-flash = { version = "0.1.0", path = "../../pinetime-flash" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

[profile.release]
debug = 2
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 's' # try `s` or `z`, sometimes one is smaller, sometimes the other.

