[package]
edition = "2021"
name = "pinetime-embassy-bootloader"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.2.0" }
embassy-nrf = { version = "0.1.0", features = ["nrf52832", "nightly"] } #, "nfc-pins-as-gpio"] }
embassy-boot = { version = "0.1.0" }
embassy-boot-nrf = { version = "0.1.0", features = ["softdevice"] }
embedded-io = "0.4.0"
embedded-storage-async = "0.4.0"
embedded-storage = "0.3.0"
embedded-hal = "=1.0.0-alpha.11"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6" }
nrf-softdevice-mbr = { version = "0.1.0" } 

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
