[package]
edition = "2021"
name = "watchful-infinitime-recovery"
version = "0.1.0"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
embassy-futures = { version = "0.1.0" }
futures = { version = "0.3", default-features = false, features = ["async-await"]}
embassy-embedded-hal = { version = "0.2.0", default-features = false }
embassy-sync = { version = "0.6.0" }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "nightly", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.3.0" }
embassy-nrf = { version = "0.2.0", features = ["nrf52832", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
embedded-io = "0.6.0"
embedded-storage = "0.3.1"
embedded-hal = "1.0.0"

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
heapless = "0.7"
