[package]
edition = "2021"
name = "recovery-boot"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
embassy-nrf = { version = "0.1.0", default-features = false, features = ["rt", "nrf52832"] }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt-rtt = "0.4"

[profile.release]
debug = 2
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 's' # try `s` or `z`, sometimes one is smaller, sometimes the other.
