[package]
edition = "2021"
name = "reloader-embassy"
version = "0.1.0"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
embassy-futures = { version = "0.1.0" }
futures = { version = "0.3", default-features = false, features = ["async-await"]}
embassy-embedded-hal = { version = "0.1.0", default-features = false, features = ["defmt"] }
embassy-sync = { version = "0.2.0" }
embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "nightly", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "nightly", "unstable-pac", "time", "unstable-traits", "nfc-pins-as-gpio"] }
embassy-boot-nrf = { version = "0.1.0", features = ["nightly"] }
embassy-boot = { version = "0.1.0", features = ["nightly"] }
embedded-io = "0.4.0"
embedded-storage = "0.3.0"
embedded-hal = "=1.0.0-alpha.11"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6" }
pinetime-flash = { version = "0.1.0", path = "../../pinetime-flash", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
heapless = "0.7"
